<fix>: fix aar build problems and add customized solutions support.

--- a/mediapipe/java/com/google/mediapipe/solutioncore/BUILD
+++ b/mediapipe/java/com/google/mediapipe/solutioncore/BUILD
@@ -135,3 +135,10 @@ mediapipe_aar(
     srcs = glob(["**/*.java"]),
     gen_libmediapipe = False,
 )
+
+# Expose the java source files for building mediapipe AAR.
+filegroup(
+    name = "java_src",
+    srcs = glob(["**/*.java"]),
+    visibility = ["//mediapipe:__subpackages__"],
+)
